--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+github: [metadata]
 encoding: UTF-8
 kramdown:
   input: GFM
@@ -6,3 +7,21 @@ future: true
 jailed: true
 theme: jekyll-theme-midnight
 gfm_quirks: paragraph_end
+title: Kart35's Blog
+description: Labbing and things.
+
+paginate: 5
+paginate_path: "/blog/page:num/"
+
+plugins:
+  - jekyll-sitemap
+  - jekyll-coffeescript
+  - jekyll-gist
+  - jekyll-github-metadata
+  - jekyll-paginate
+  - jekyll-relative-links
+  - jekyll-optional-front-matter
+  - jekyll-readme-index
+  - jekyll-default-layout
+  - jekyll-titles-from-headings
+  - jekyll-feed
