--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,21 @@
-github: [metadata]
+
 encoding: UTF-8
 kramdown:
   input: GFM
   hard_wrap: false
 future: true
 jailed: true
+safe: true
+incremental: false
 theme: jekyll-theme-midnight
 gfm_quirks: paragraph_end
 title: Kart35's Blog
 description: Labbing and things.
-
+repository: KART35/kart35.github.io
 paginate: 5
 paginate_path: "/blog/page:num/"
 
 plugins:
-  - jekyll-sitemap
   - jekyll-coffeescript
   - jekyll-gist
   - jekyll-github-metadata
